# AlgebraicCalculator

./: AlgebraicCalculator.cpp  AlgebraicCalculator.sln  AlgebraicCalculator.vcxproj  AlgebraicCalculator.vcxproj.filters  CMakeLists.txt  Circle.cpp  Circle.h  Fraction.cpp  Fraction.h  README.md  RightAngleShape.cpp  RightAngleShape.h
DataTypes/: Circle.hpp  Fraction.hpp  Parabola.hpp  Primes.hpp  Radical.hpp  RightAngleShape.hpp  Term.hpp
DataTypes/Circle/: Circle.cpp  Circle.h
DataTypes/ExponentialInt/: ExponentialInt.cpp  ExponentialInt.h
DataTypes/Fraction/: Fraction.cpp  Fraction.h
DataTypes/RightAngleShapes/: RightAngleShape.cpp  RightAngleShape.h
DataTypes/Terms/: Term.cpp  Term.h
ProblemTypes/FixedDistanceUniformMotion/: FixedDistanceUniformMotion.cpp  FixedDistanceUniformMotion.h
